--- a/Css Styling.css
+++ b/Css Styling.css
@@ -77,14 +77,14 @@ ul li:hover ul.dropdown {
  
 }
 .Logo-icon{
-    padding-top: 4px;
+    margin-top: 4px;
     height: 50px;
     width:45px;
 }
 .Tile-and-logo{
     display: flex;
     flex-direction: row;
-    padding-left: 40px;
+    margin-left: 40px;
     padding-top: 10px;
 }
 .Purchse-Button{
@@ -121,13 +121,13 @@ footer{
     padding-top:10px;
 }
 .socials-iconi{
-    padding-right: 5px;
+    margin-right: 5px;
 }
 .socials-iconf{
-    padding-right: 5px;
+    margin-right: 5px;
 }
 .socials-icont{
-    padding-right: 5px;
+    margin-right: 5px;
 }
 .Tele-Icon{
     height: 25px;
@@ -138,8 +138,8 @@ footer{
     display: flex;
 }
 .Tele-Icon{
-    padding-top: 15px;
-    padding-right:10px ;
+    margin-top: 15px;
+    margin-right:10px ;
 }
 
 
@@ -156,15 +156,15 @@ footer{
     grid-column-start: 1;
 }
 .Payment-Icons{
-    padding-top: 10px;
+    margin-top: 10px;
 }
 .Contact-Title{
-    padding-top: 10px;
+    margin-top: 10px;
     font-weight: bold;
 
 }
 .Social-Title{
-    padding-top: 16px;
+    margin-top: 16px;
     font-weight: bold;
 }
 
@@ -176,10 +176,10 @@ footer{
 .Tile-and-logo-Footer{
     display: flex;
     flex-direction: row;
-    padding-left: 40px;
+    margin-left: 40px;
 }
 .Logo-icon{
-    padding-top: 11px;
+    margin-top: 11px;
     height: 40px;
     width:35px;
 }
@@ -203,15 +203,15 @@ footer{
 
 .Location-Icon{
     grid-row:1;
-    padding-left: 40px;
-    padding-top: 18px;
+    margin-left: 40px;
+    margin-top: 18px;
 }
 .CMB-tItLE{
-    padding-top: 10px;
+    margin-top: 10px;
     font-weight: bold;
 }
 .Mail-title{
-    padding-top: 10px;
+    margin-top: 10px;
     font-weight: bold;
 }
 .Location-Icon{
@@ -225,8 +225,8 @@ footer{
     padding-left: 40px;
 }
 .Map-link-f{
-    padding-top: 12px;
-    padding-left: 5px;
+    margin-top: 12px;
+    margin-left: 5px;
 }
 
 .Mail{
@@ -236,25 +236,25 @@ footer{
 .Mail-Icon{
     height: 25px;
     width:23px;
-    padding-top: 10px;
-    padding-right: 5px;
+    margin-top: 10px;
+    margin-right: 5px;
 }
 .Mail-Icon1{
     height: 25px;
     width:23px;
-    padding-top: 15px;
-    padding-right: 5px;
+    margin-top: 15px;
+    margin-right: 5px;
 
 }
 .Payments{
-    padding-top: 19px;
+    margin-top: 19px;
     font-weight: bold;
 
 }
 .CARD-Icons{
     height: 25px;
     width:45px;
-    padding-right: 5px;
+    margin-right: 5px;
 }
 .CARD-Icons-American{
     height: 25px;
@@ -263,20 +263,20 @@ footer{
 .Payment-Methods{
     grid-column-start:2;
     grid-row-start: 2;
-    padding-top:80px ;
+    margin-top:80px ;
 
 }
 .socials{
     grid-column-start: 3;
     grid-row-start: 2;
-    padding-top: 84px;
+    margin-top: 84px;
 }
 .Contacts-1{
     grid-column: 3;
     grid-row-start: 1;
 }
 .Mail-and-Contact {
-    padding-top: 0; 
+    margin-top: 0; 
 }
 .logoandtitle{
     display: flex;
@@ -317,7 +317,7 @@ footer{
 .Section-Alignment{
     width: 95%;
     margin: auto; /* Center the content horizontally */
-    padding: 10px; /* Add padding */
+    padding: 10px; 
 }
 
 
@@ -344,7 +344,7 @@ h1 {
     filter: drop-shadow(4px 4px 8px #000000);
 }
 .Intro-Message{
-    padding-top: 15px;
+    margin-top: 15px;
 
 }
 
@@ -366,8 +366,8 @@ h1 {
     grid-template-columns: 20% 20% 20% 20%;
     grid-template-rows: 20% 20% 20%  20%;
     justify-content: space-evenly; 
-    padding-left: 50px;
-    padding-bottom: 0px;
+    margin-left: 50px;
+    margin-bottom: 0px;
     
 }
 .Appleimg{
@@ -410,24 +410,24 @@ h1 {
 .Apple{
     grid-column-start: 1;
     grid-row-end: 2;
-    padding-top: 20px;
+    margin-top: 20px;
 
 }
 .Pepper{
     grid-column-start: 2;
     grid-row-end: 2;
-    padding-top: 20px;
+    margin-top: 20px;
 }
 .Radish{
     grid-column-start: 3;
     grid-row-end: 2;
-    padding-top: 20px;
+    margin-top: 20px;
 }
 
 .Pomegranates{
     grid-column-start: 4;
     grid-row-end: 2;
-    padding-top: 20px;
+    margin-top: 20px;
 }
 
 
@@ -451,7 +451,7 @@ h1 {
     grid-template-columns: 20% 20% 20% 20% ;
     grid-template-rows: 20% 20% 20% 20% ;
     justify-content: space-between;
-    padding-left: 10px;
+    margin-left: 10px;
 }
 .jam{
     grid-column-start: 1;
@@ -490,23 +490,23 @@ h1 {
 .content1{
     grid-column-start: 1;
     grid-row-end: 2;
-    padding-top: 20px;
+    margin-top: 20px;
 
 }
 .content2{
     grid-column-start: 2;
     grid-row-end: 2;
-    padding-top: 20px;
+    margin-top: 20px;
 }
 .content3{
     grid-column-start: 3;
     grid-row-end: 2;
-    padding-top: 20px;
+    margin-top: 20px;
 }
 .content4{
     grid-column-start: 4;
     grid-row-end: 2;
-    padding-top: 20px;
+    margin-top: 20px;
 }
 
 
@@ -576,7 +576,7 @@ h1 {
 .About-Us-Page-Alignment, .Summary-Table-content, .Branch-Images{
     width: 80%;
     margin: auto; /* Center the content horizontally */
-    padding: 10px; /* Add padding */
+    padding: 10px; 
 }
 .Summary-Table-content table th{
     background-color:var(--Table-Heading);
@@ -617,7 +617,7 @@ h1 {
 }
 .CMB-Branch-Message{
     grid-column-start: 2;
-    padding-top: 10px;
+    margin-top: 10px;
 }
 
 /*Stylings that are realted to Kandy Branch section of About Us Page*/
@@ -639,7 +639,7 @@ h1 {
 }
 .Kandy-Branch-Message{
     grid-column-start: 2;
-    padding-top: 10px;
+    margin-top: 10px;
 }
 .Kandy-Branch-Img{
     width: 850px;
@@ -732,7 +732,7 @@ td, th {
 .Milk-Section-Alignment{
     width: 80%;
     margin: auto; /* Center the content horizontally */
-    padding: 10px; /* Add padding */
+    padding: 10px; 
     display: flex;
     flex-direction: row;   
 }
@@ -817,7 +817,7 @@ td, th {
     cursor: pointer;
 }
 .Text-Alignment{
-    padding-left: 40px;
+    margin-left: 40px;
 }
 
 
@@ -859,10 +859,10 @@ td, th {
     cursor: pointer;
 }
 .Text-Alignment2{
-    padding-right: 50px;
+    margin-right: 50px;
 }
 .Text-Alignment3{
-    padding-left: 70px;
+    margin-left: 70px;
 }
 
 
@@ -914,7 +914,7 @@ td, th {
 .Selection-Form{
     width: 80%;
     margin: auto; /* Center the content horizontally */
-    padding: 10px; /* Add padding */
+    padding: 10px; 
 }
 .containercenter{
     width: 50%; 
@@ -1076,7 +1076,7 @@ input, select, option, textarea{
     filter: drop-shadow(4px 4px 8px #000000);
 }
 .Veg-Content1, .Veg-Content2, .Veg-Content3, .Veg-Content4 {
-    padding-top: 15px;
+    margin-top: 15px;
 }
 .lettuce-Img, .Totmato-Img, .Carrot-Img{
     height: 5;
@@ -1122,7 +1122,7 @@ input, select, option, textarea{
 }
 
 .Seasonal-Content1{
-    padding-top: 20px;  
+    margin-top: 20px;  
     display: grid;
     grid-template-columns: 20% 70%;
     justify-content: center;
@@ -1144,8 +1144,8 @@ input, select, option, textarea{
     grid-template-columns: 70% 20%;
     justify-content: center;
     align-items: center;
-    padding-top: 20px; 
-    padding-right: 10px;  
+    margin-top: 20px; 
+    margin-right: 10px;  
    
 }
 .Summer-Sweet-Corn-Img{
@@ -1164,7 +1164,7 @@ input, select, option, textarea{
 }
 
 .Seasonal-Content3{
-    padding-top: 20px;  
+    margin-top: 20px;  
     display: grid;
     grid-template-columns: 20% 70%;
     justify-content: center;
@@ -1278,7 +1278,7 @@ input, select, option, textarea{
 .Tier-Alignment{
     background-color: var(--Light-ivory);
     margin: auto; /* Center the content horizontally */
-    padding: 10px; /* Add padding */
+    padding: 10px; 
 
 }
 .Loyalty-Introduction{
@@ -1386,7 +1386,7 @@ input, select, option, textarea{
   }
   .Footer-Title{
     font-size: 10px; 
-    padding-top: 1px;
+    margin-top: 1px;
 
   }
   .Logo-icon{
@@ -1400,14 +1400,17 @@ input, select, option, textarea{
     padding: 0px;
     position: absolute;
     top:10px;
-    right: 110px;
+    right: 90px;
+    
   }
    .Navigation-Bar ul {
+     font-weight: 730;
      font-size: 8px;
      width: 180px;
      display: flex;
   }
   .Purchse-Button{
+    display: none;
     font-size: 5px;
     width: 50px;
     padding: 3px;
@@ -1444,8 +1447,8 @@ input, select, option, textarea{
         grid-template-rows: 20% 20% 20% 20%; 
         grid-template-columns: 50% 50%;
         row-gap:145px;
-        padding-left: 15px;
-        padding-right: 15px;
+        margin-left: 35px;
+        margin-right: 0px;
     }
 
     .Appleimg{
@@ -1460,7 +1463,7 @@ input, select, option, textarea{
     .Apple{
         position: absolute;
         top: 1050px;
-        left: 80px;
+        left: 95px;
         font-size: 15px;
         text-align: center;
 
@@ -1468,7 +1471,7 @@ input, select, option, textarea{
     .p1{
         position: absolute;
         top: 1100px;
-        left: 70px;
+        left: 85px;
         font-size: 18px;
     }
     .Pepperimg{
@@ -1480,14 +1483,14 @@ input, select, option, textarea{
     .Pepper{
         position: absolute;
         top: 1050px;
-        left: 240px;
+        left: 260px;
         font-size: 15px;
         text-align: center;
     }
     .p2{
         position: absolute;
         top: 1100px;
-        left: 240px;
+        left: 260px;
         font-size: 18px;
     }
     .Radishimg{
@@ -1501,14 +1504,14 @@ input, select, option, textarea{
     .Radish{
         position:absolute;
         top:1390px;
-        left: 80px;
+        left: 100px;
         font-size: 15px;
         text-align: center;
     }
     .p3{
         position: absolute;
         top: 1440px;
-        left: 65px;
+        left: 85px;
         font-size: 18px;
     }
     .Pomegranatesimg{
@@ -1521,14 +1524,14 @@ input, select, option, textarea{
     .Pomegranates{
         position:absolute;
         top:1390px;
-        left: 225px;
+        left: 245px;
         font-size: 15px;
         text-align: center;
     }
     .p4{
         position: absolute;
         top: 1440px;
-        left: 240px;
+        left: 265px;
         font-size: 18px;
     }
 
@@ -1548,8 +1551,8 @@ input, select, option, textarea{
         grid-template-rows: 20% 20% 20% 20%; 
         grid-template-columns: 50% 50%;
         row-gap:90px;
-        padding-left: 15px;
-        padding-right: 15px;
+        margin-left: 15px;
+        margin-right: 15px;
     }
     .jam{
         grid-column-start: 1;
@@ -1651,7 +1654,7 @@ input, select, option, textarea{
     .Weekly-Deal-Section .Section-Alignment{
         width: 95%;
         margin: auto; /* Center the content horizontally */
-        padding: 10px; /* Add padding */
+        padding: 10px; 
         
     }
     .Shrimpimg, .salmonimg, .oysterimg {
@@ -1666,17 +1669,17 @@ input, select, option, textarea{
     .socials-iconi, .socials-iconf, .socials-icont, .socials-iconTT  {
         height: 10px;
         width:10px;
-        padding-top:10px;
+        margin-top:10px;
     }
     .Location-Icon, .Payment-Icon, .Tele-Icon, .Mail-Icon, .CARD-Icons, .CARD-Icons-American{
         height: 10px;
         width:10px;
     }
     .Location-Icon{
-        padding-top: 22px;
+        margin-top: 22px;
     }
     .Mail-Icon{
-        padding-top: 17px;
+        margin-top: 17px;
     }
     footer{
         font-size: 12px;
@@ -1691,7 +1694,7 @@ input, select, option, textarea{
         
     }
     .CMB-tItLE{
-        padding-bottom: 0px;
+        margin-bottom: 0px;
     }
     .Summary-Table-content table {
         width: 100%;
@@ -1728,6 +1731,7 @@ input, select, option, textarea{
       }
       .Branch-Images h1{
         font-size: 15px;
+        margin-left: 15px;
       }
       .Branch-Images h3{
         font-size: 13px; 
@@ -1735,11 +1739,16 @@ input, select, option, textarea{
       .Kandy-Branch-Img, .CMB-Branch-Img{
         width: 320px;
         height:200px;
+        margin-left: 8px;
       }
+      .Kandy-Map-Link, .Colombo-Map-Link{
+        margin-left: 15px;
+      }
+     
       .Branch-Images{
         width:80%;
         margin: 0; /* Center the content horizontally */
-        padding: 0px; /* Add padding */
+        padding: 0px; 
      }
      .Colombo-Branch-Section{
         display: grid;
@@ -1750,7 +1759,7 @@ input, select, option, textarea{
     .CMB-Branch-Message{
         position: absolute;
         top: 1360px;
-        padding-right: 30px;
+        margin-right: 30px;
         text-align: center;
     }
     .Kandy-Branch-Section{
@@ -1765,7 +1774,7 @@ input, select, option, textarea{
     .Kandy-Branch-Message{
         position: absolute;
         top: 2150px;
-        padding-right: 15px;
+        margin-right: 15px;
         text-align: center;
 
     }
@@ -1794,7 +1803,7 @@ input, select, option, textarea{
     .Milk-Section-Alignment{
         width: 100%;
         margin: auto; /* Center the content horizontally */
-        padding:0px; /* Add padding */
+        padding:0px;
         display: flex;
         flex-direction: row;   
     }
@@ -1910,28 +1919,28 @@ input, select, option, textarea{
         text-align: center;
         position: absolute;
         top: 2600px;
-        left: 112PX;
+        left: 125PX;
         margin-top: 35px;
     }
     .Curdtxt2{
         text-align: center;
         position: absolute;
-        top: 2870px;
-        left: 145PX;
+        top: 2850px;
+        left: 155PX;
         margin-top: 35px;
     }
     .Curdtxt3{
         text-align: center;
         position: absolute;
         top: 3100px;
-        left: 135PX;
+        left: 145PX;
         margin-top: 35px;
     }
     .Curdtxt4{
         text-align: center;
         position: absolute;
         top: 3350px;
-        left: 100PX;
+        left: 125PX;
         margin-top: 35px;
     }
     .Ghee-Titles {
@@ -1945,37 +1954,37 @@ input, select, option, textarea{
         height: 100px;
         width: 105px;
         margin-bottom: 20px;
-        padding: 20px;
+        margin: 20px;
         filter: drop-shadow(4px 4px 8px #000000);
     }
     .Gheetxt1{
         text-align: center;
         position: absolute;
         top: 3780px;
-        left: 135PX;
-        padding-top: 11px;
+        left: 155PX;
+        margin-top: 11px;
 
     }
     .Gheetxt2{
         text-align: center;
         position: absolute;
         top: 3990px;
-        left: 135PX;
+        left: 155PX;
         margin-top: 25px;
     }
     .Gheetxt3{
         text-align: center;
         position: absolute;
-        top: 4220px;
-        left: 135PX;
-        padding-top: 11px;
+        top: 4290px;
+        left: 155PX;
+        margin-top: 11px;
     }
     .Gheetxt4{
         text-align: center;
         position: absolute;
-        top: 4490px;
-        left: 135PX;
-        padding-top: 11px;
+        top: 4530px;
+        left: 155PX;
+        margin-top: 11px;
     }
     .Thai-Eggplant-Img, .Bitter-Melon-Img, .Daikon-Radish-Img, .Dragon-Img{
         height: 220px;
@@ -2189,7 +2198,7 @@ input, select, option, textarea{
         width: 155px; 
     }
     .Seasonal-Content1{
-        padding-top: 0px;  
+        margin-top: 0px;  
         display: grid;
         grid-template-columns: 50% 50%;
         justify-content: center;
@@ -2210,8 +2219,8 @@ input, select, option, textarea{
         grid-template-columns: 50% 50%;
         justify-content: center;
         align-items: center;
-        padding-top: 20px; 
-        padding-right: 10px;  
+        margin-top: 20px; 
+        margin-right: 10px;  
        
     }
     .Summer-Sweet-Corn-Img{
@@ -2227,7 +2236,7 @@ input, select, option, textarea{
     }
     
     .Seasonal-Content3{
-        padding-top: 20px;  
+        margin-top: 20px;  
         display: grid;
         grid-template-columns: 50% 50%;
         justify-content: center;
@@ -2297,7 +2306,7 @@ input, select, option, textarea{
     form {
         display: block;
     }
-    label, input, select {
+    label, input, select, textarea {
         display: block;
         width: 90%;
         margin: 5px auto;
@@ -2331,7 +2340,7 @@ input, select, option, textarea{
         text-align: center;
     }
     .Silver ul, .Gold ul, .Platinum ul {
-        padding-left: 20px;
+        margin-left: 20px;
     }
     .Silver ul li, .Gold ul li, .Platinum ul li {
         font-size: 16px;
